# dir_monitor_ext

./: CMakeLists.txt  README.md  conanfile.py
include/dir_monitor_ext/: dir_manager.hpp  dir_monitor_ext.hpp  file_monitor.hpp  file_trigger.hpp  typedefs.hpp  win_dir_manager.hpp  win_file_monitor.hpp
src/: main_impl.cpp
test/: file_monitor_tests.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp  test_package.cpp
